Fixed some sneaky bugs & layout issues

--- a/app/scss/_misc.scss
+++ b/app/scss/_misc.scss
@@ -1,6 +1,6 @@
 .view-mode-wrapper {
   position: fixed;
-  z-index: 10000;
+  z-index: 1000;
   padding: 0.8rem;
   margin-top: 1rem;
   border-top-right-radius: 1rem;
